# FileUtils

./: .flake8  .gitignore  CHANGELOG.md  CI_DEBUG_SUMMARY.md  MANIFEST.in  README.md  config.yaml  environment.yaml  file_utils.py  file_utils_azure_test_nb.ipynb  file_utils_todo.txt  pyproject.toml  setup.cfg  setup.py  test_file_utils.py  test_log.txt
.github/: ACTIONS_TROUBLESHOOTING.md
.github/workflows/: ci.yml
FileUtils/: __init__.py  azure_file_utils.py  azure_setup.py  file_utils.py  file_utils_azure_test_nb.ipynb  version.py
FileUtils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
FileUtils/config/: __init__.py  default_config.yaml  schema.py
FileUtils/docs/: README_local_only.md
_archive/: file-utils-readme.md  file-utils-todo.md  file_utils.py
_archive/FileUtils2/_archive/: file_utils.py
_archive/FileUtils_v1/: README.md  config.yaml  file_utils.py
data/processed/: ai_analysis_report_20251018_081039.md  format_test_parquet_20251018_081528_data.parquet  metadata_test_20251018_081534_processed.parquet  simple_document_20251018_081527.docx  test_markdown_20251018_080009.md
data/processed/reports/2024/: model_performance_report_20251018_081527.md  test_subpath_20251018_081415.md
data/templates/: style-template-doc.docx
docs/: API_REFERENCE.md  AZURE_SETUP.md  AZURE_SETUP_old.md  DEVELOPMENT.md  DOCUMENT_TYPES.md  ENHANCED_DOCX.md  EXAMPLES.md  FUTURE_FEATURES.md  GETTING_STARTED_GUIDE.md  INSTALLATION.md  TESTING.md  USAGE.md
docs/specs/: fileutils-logging-spec.md
examples/: FileUtils_tutorial.ipynb  README.md  ai_workflow.py  azure_storage.py  basic_usage.py  configurable_directories.py  configuration.py  data_pipeline.py  document_types.py  enhanced_docx.py  error_handling.py  excel_csv_roundtrip.py  excel_to_csv_conversion.py  multi_format_reports.py  performance_optimization.py  personal_template_demo.py  pptx_handling.py  root_level_directories.py
scripts/: build_package.py  get_project_structure.py  setup_dev.py
src/FileUtils/: __init__.py  version.py
src/FileUtils/config/: __init__.py  config.yaml  cs_workflow_config.yaml  default_config.yaml  defaults.py  schema.py
src/FileUtils/core/: I'm still getting errors.yml  __init__.py  base.py  enums.py  file_utils.py  types.py
src/FileUtils/storage/: __init__.py  azure.py  local.py
src/FileUtils/templates/: __init__.py  converter.py  manager.py  styles.py
src/FileUtils/templates/config/: personal_template_config.yaml  template_config.yaml
src/FileUtils/utils/: __init__.py  common.py  dataframe_io.py  document_io.py  logging.py  pathing.py
tests/: conftest.py  test_file_utils.py
tests/integration/: test_azure_storage.py  test_excel_csv_conversion.py
tests/unit/: test_base_storage_multi_io.py  test_dataframe_io.py  test_document_types.py  test_file_operations.py  test_file_utils.py  test_logging_control.py  test_pathing.py
