[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FileUtils"
version = "0.8.1"
description = "File utilities for data science projects with Azure support"
readme = "README.md"
authors = [{name = "Topi Jarvinen", email = "topi.jarvinen@gmail.com"}]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.3.0",
    "pyyaml>=5.4.1",
    "python-dotenv>=0.19.0",
    "jsonschema>=3.2.0",
]

[tool.setuptools]
packages = ["FileUtils", "FileUtils.core", "FileUtils.storage", "FileUtils.config", "FileUtils.utils", "FileUtils.templates"]
package-dir = {"" = "src"}
package-data = { "FileUtils" = ["config/*.yaml", "templates/config/*.yaml"] }

[project.optional-dependencies]
azure = [
    "azure-storage-blob>=12.0.0",
    "azure-identity>=1.5.0",
]
parquet = ["pyarrow>=7.0.0"]
excel = ["openpyxl>=3.0.9"]
documents = [
    "python-docx>=0.8.11",
    "markdown>=3.4.0",
    "PyMuPDF>=1.23.0",
]
all = [
    "azure-storage-blob>=12.0.0",
    "azure-identity>=1.5.0",
    "pyarrow>=7.0.0",
    "openpyxl>=3.0.9",
    "python-docx>=0.8.11",
    "markdown>=3.4.0",
    "PyMuPDF>=1.23.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require external resources",
]
filterwarnings = [
    "ignore::DeprecationWarning:fitz.*",
    "ignore::DeprecationWarning:.*SwigPy.*",
    "ignore::DeprecationWarning:.*swigvarlink.*",
]
addopts = "--disable-warnings"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88
target-version = ['py311', 'py312']